--- a/index.html
+++ b/index.html
@@ -2,95 +2,130 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Juan Felipe Morales C | Landing page</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
+<!-- Hola qué tal, te recuerdo que la web es de uso libre -->
+<!-- usala para lo que desees y no olvides suscribirte a AlexCG Design -->
+<!-- Web hecha por AlexCG Design, si te sirvió la plantilla por favor entra a AlexCG Design -->
+<!-- ->>>> https://www.youtube.com/alexcgdesign <<<<- -->
 
 <body>
-  <h1>Bienvenido a mi sitio web</h1>
+    <header>
+        <div class="textos">
+            <h1 class="titulo">Juan Felipe Morales Cadavid</h1>
+            <h3 class="subtitulo">Web developer</h3>
+            <a href="#" class="boton">Landing page</a>
+        </div>
+        <div class="sesgoabajo"></div>
+    </header>
+    <main>
+        <section class="acerca-de">
+            <div class="contenedor">
+                <h2 class="sobre-nosotros">Sobre mi</h2>
+                <h3 class="slogan">Desarrollo web en VSCode</h3>
+                <p class="parrafo">Tengo 19 años y en este momento
+                    me encuentro estudiando en la IUE
+                    como tecnologo en desarrollo de sistemas
+                    de información.</p>
+                <p class="parrafo">por el momento no cuento con
+                    ninguna experiencia laboral, pero estoy
+                    abierto a conocer mas sobre este mundo y
+                    desarrollarme como profesiona. </p>
+                    <p>soy una persona que sabe
+                        manejar muy bien sus emociones, colaborativo
+                        con mis compañeros, responsable, dispuesto a
+                        cambiar mis ideas y opiniones cuando estoy
+                        equivocado, tengo un ingles fluido con un
+                        nivel B2 y soy un apersona muy sociable</p>
+                <a href="#" class="boton">Suscribete</a>
+            </div>
+        </section>
+        <section class="galeria">
+            <div class="sesgoarriba"></div>
+            <div class="imagenes none">
+                <img src="1.jpg" alt="">
+            </div>
+            <div class="imagenes">
+                <img src="3.jpg" alt="">
+            </div>
+            <div class="imagenes">
+                <img src="2.jpg" alt="">
+                <div class="encima">
+                    <h2>Juan Felipe Morales C.</h2>
+                    <div></div>
+                </div>
+            </div>
+            <div class="imagenes">
+                <img src="4.jpeg" alt="">
 
-  <hr>
-
-  <p>
-    <dl>
-      <h2>Hola, soy Juan Felipe</h2>
-    </dl>
-    <dt>
-      <h3>Diseñador web</h3>
-    </dt>
-  </p>
-
-
-  <p>Tengo 19 años y en este momento
-    me encuentro estudiando en la IUE
-    como tecnologo en desarrollo de sistemas
-    de información. </p>
-
-  <p>
-    <dl> <strong>Experiencia:</strong>
-      <dt>
-        por el momento no cuento con
-        ninguna experiencia laboral, pero estoy
-        abierto a conocer mas sobre este mundo y
-        desarrollarme como profesional
-      </dt>
-    </dl>
-
-    <br>
-
-    <dl> <strong>Habilidades:</strong>
-      <dt>
-        soy una persona que sabe
-        manejar muy bien sus emociones, colaborativo
-        con mis compañeros, responsable, dispuesto a
-        cambiar mis ideas y opiniones cuando estoy
-        equivocado, tengo un ingles fluido con un
-        nivel B2 y soy un apersona muy sociable
-      </dt>
-    </dl>
-
-    <br>
-
-    <dl> <strong>Hobbys:</strong>
-      <dt>
-        soy amante del mundo de los
-        videojuegos, practico algún deporte cuando
-        se me da la oportunidad.
-      </dt>
-    </dl>
-
-
-  </p>
-
-  <br>
-
-  <p> <strong> Lista de proyectos para desarrollar el curso:</strong>
-
-    <ul>
-      <li>Realizar mi pagina web</li> 
-      <li>realizar mi hoja de vida</li> <a href="https://www.figma.com/file/hfp55N60BN6HzHIBka7FPg/Presentacion1?node-id=0%3A1">Hoja de vida Figma</a>
-      <li>completar todos los objetivos que se vayan presentando</li>
-    </ul>
-
-  </p>
-
-  <strong>Estudios:</strong>
-  <br>
-  <br>
-  <dt> <strong>primaria:</strong>
-    Liceo Cartago
-    Colegio Diosesano - Trina Morales de Avila
-  </dt>
-  <dt><strong>Bachillerato:</strong> Instituto Educativo Renacer</dt>
-
-
-
-
-
-
-
+            </div>
+            <div class="imagenes none">
+                <img src="5.jpeg" alt="">
+            </div>
+            <div class="sesgoabajo"></div>
+        </section>
+        <section class="miembros">
+            <div class="contenedor">
+                <h2 class="sobre-nosotros">Paginas de Interés</h2>
+                <h3 class="slogan">Conoce mi trabajo</h3>
+                <div class="cards">
+                    <div class="card">
+                        <img src="" alt="">
+                        <h4> <a href="https://www.figma.com/file/hfp55N60BN6HzHIBka7FPg/Presentacion1?node-id=0%3A1">Diseño figma </p></a></h4>
+                        <p>Conoce más <a href="Pagina_SobreMi.html">sobre mi</a>  vida y mi desarrollo personal 
+                    </div>
+                    <div class="card">
+                        <img src="" alt="">
+                        <h4><a href="Portafolio">Portafolio</a> </h4>
+                        <p>Encuentra mis desarrollos llevados a cabo</p>
+                    </div>
+                    <div class="card">
+                        <img src="" alt="">
+                        <h4> <a href="Contactame">Contacto</a> </h4>
+                        <p>a través de <a href="https://www.instagram.com/juanfem1102/?hl=es">Instagram</a> o Email por juanfem1102@gmail.com.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="fondo">
+            <div class="sesgoarriba"></div>
+            <div class="contenedor">
+                <!-- <h2 class="titulo-patrocinadores">Nuestra clientes</h2>
+                <h3 class="subtitulo-patrocinadores">Conoce a algunos de nuestros patrocinadores</h3>
+                <div class="clientes"> -->
+                    <!-- <div class="cliente">
+                        <img src="logo.png" alt="">
+                    </div>
+                    <div class="cliente">
+                        <img src="logo.png" alt="">
+                    </div>
+                    <div class="cliente">
+                        <img src="logo.png" alt="">
+                    </div>
+                </div>
+                <h3 class="subtitulo-patrocinadores especial">y muchos más clientes...</h3>
+            </div> -->
+            <div class="sesgoabajo-unico"></div>
+        </section>
+    </main>
+    <footer>
+        <div class="contenedor">
+            <h2 class="titulo-footer">Contactanos</h2>
+            <h3 class="subtitulo-footer">Lo apreciaría mucho</h3>
+            <div class="footer">
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Nombre">
+                    <input type="email" name="" id="" placeholder="Email">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Ingrese su mensaje..."></textarea>
+                    <input type="submit" value="Enviar">
+                </form>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
